# python-project-50

./: .gitignore  Makefile  README.md  README.md.save  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: python-ci.yml
gendiff/: __init__.py  cli.py  parsers.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: diff_builder.py
tests/: test_diff.py
