[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gendiff = "gendiff.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.ruff]
line-length = 80
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"gendiff/__init__.py" = ["F401"]
"tests/test_diff.py" = ["I001"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
]

